# goblincon

./: .gitignore  Cargo.toml
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: client.ts  host.tsx  pagemap.tsx  play.tsx  template.html  utils.tsx
client/src/components/: countdown.tsx
client/src/host/: drawblins.tsx  room.ts  setting.tsx
client/src/modules/: extract.ts  state.ts  variant.ts
client/src/play/: drawblins.tsx  globals.ts
host/: icon.svg.import  project.godot
host/Resources/: theme.tres
host/Scenes/Components/: lobby_info.tscn
host/Scenes/Instances/: drawing.tscn  player_icon.tscn  setting.tscn  vote_icon.tscn  voting_choice.tscn
host/Scenes/Stages/: drawblins.tscn  drawing.tscn  gam9F9D.tmp  gamBAC6.tmp  gamFFDA.tmp  game.tscn  landing.tscn  loading.tscn  lobby.tscn  main_menu.tscn  scoring.tscn  vot1D8.tmp  voting.tscn
host/Scripts/: fleeting_stage.gd  main_menu.gd  stage.gd  stage_mount.gd
host/Scripts/Autoloads/: client.gd  drawblins.gd  mode.gd  utils.gd
host/Scripts/Classes/: drawblins_settings.gd  game_settings.gd  player.gd  round.gd  setting.gd
host/Scripts/Components/: lobby_info.gd  status.gd
host/Scripts/Instances/: drawing.gd  player_icon.gd  setting_button.gd  vote_icon.gd  voting_choice.gd
host/Scripts/Stages/: drawblins.gd  drawing.gd  game.gd  landing.gd  lobby.gd  (+4 more)
player/: package-lock.json  package.json  webpack.config.js
player/src/: canvas.tsx  client.ts  drawblins.tsx  globals.ts  index.tsx
src/: app copy.rs  app-old.rs  app.rs  goblin_names.rs  main.rs  types.rs
(+17 files in other folders)
